<resources>
    <string name="app_name">Yep</string>
    <string name="action_settings">Settings</string>
    <string name="subTitle">Do I Know You?</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="loginBtn_label">Iniciar Sesión</string>
    <string name="username_hint">Nombre de Usuario</string>
    <string name="passwordField_hint">Contraseña</string>
</resources>
